--- a/order_app/index.html
+++ b/order_app/index.html
@@ -29,19 +29,20 @@
         <section class="order">
             
             <form id="order-form">
+
                 <h1>Order Food Now</h1>
                 <input id="item-input" type="text" placeholder="Order Food Item">
                 <button type="submit">Add To Order</button>
+                
             </form>
 
             <div>
                 <h2>Your Order</h2>
-                <ul id="order-list">
-                </ul>
+                <div id="order"></div>
                 <h3>Order Summary</h3>
-                <p>Subtotal: <span id="subtotal">$0.00</span></p>
-                <p>Tax: <span id="tax">$0.00</span></p>
-                <p>Total: <span id="total">$0.00</span></p>
+                <p>Subtotal: $<span id="subtotal">0.00</span></p>
+                <p>Tax: $<span id="tax">0.00</span></p>
+                <p>Total: $<span id="total">0.00</span></p>
             </div>
 
 
